WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51194
Style fix for
r73927
https://bugs.webkit.org/show_bug.cgi?id=51194
Summary
Style fix for r73927
Justin Schuh
Reported
2010-12-16 09:44:07 PST
Stye fix for
r73927
Attachments
Patch
(1.17 KB, patch)
2010-12-16 09:47 PST
,
Justin Schuh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Schuh
Comment 1
2010-12-16 09:47:18 PST
Created
attachment 76778
[details]
Patch
Justin Schuh
Comment 2
2010-12-16 09:48:27 PST
Need to remove parameters from method prototypes.
Andreas Kling
Comment 3
2010-12-16 10:24:54 PST
Comment on
attachment 76778
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2010-12-16 10:26:37 PST
Comment on
attachment 76778
[details]
Patch Rejecting
attachment 76778
[details]
from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-attachment', '--non-interactive', 76778]" exit_code: 2 Last 500 characters of output: ailed to merge in the changes. Patch failed at 0001 2010-12-16 Yury Semikhatsky <
yurys@chromium.org
> When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at WebKitTools/Scripts/update-webkit line 132. Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Full output:
http://queues.webkit.org/results/7111087
WebKit Commit Bot
Comment 5
2010-12-17 20:23:09 PST
Comment on
attachment 76778
[details]
Patch Clearing flags on attachment: 76778 Committed
r74312
: <
http://trac.webkit.org/changeset/74312
>
WebKit Commit Bot
Comment 6
2010-12-17 20:23:14 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7
2010-12-17 20:50:55 PST
The commit-queue encountered the following flaky tests while processing
attachment 76778
[details]
: fast/preloader/script.html
bug 50879
(author:
abarth@webkit.org
) fast/images/load-img-with-empty-src.html
bug 50855
(author:
mitz@webkit.org
) The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug