2010-12-17  Justin Schuh  <jschuh@chromium.org>

Reviewed by Andreas Kling.

        Style fix for r73927
        https://bugs.webkit.org/show_bug.cgi?id=51194

        No functionality change. No new tests needed.

        * html/HTMLCanvasElement.h:

Canonical link: https://commits.webkit.org/64654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74312 268f45cc-cd09-0410-ab3c-d52691b4dbfc